# focus_on_class

./: 1-0_prototype.ipynb  1-1_us_proto.ipynb  1-2_capture.ipynb  1-3_capture2.ipynb  1-6_model_changer.ipynb  1-7_all_model_compare.ipynb  1-7_compare.ipynb  1-8_all_model_compare.ipynb  2-1_three_model_compare.ipynb  3-1_openCV_test.ipynb  FINAL_REPORT.md  README.md  dataset_123_split.ipynb  focus_on_class_ppt_outline.md  git_structure_report.md  model_selection_report.md  pyproject.toml  report_compare1.md
docs/: FOCUS_ON_CLASS_MP_RENAME_MAP.md  GUIDE.md  capture2_quality_collector_report.md  mediapipe_webcam_prototype_review_2026-04-21.md  project_structure_flow.md  prototype_change_prompt.md  report_compare1.md
efficientnet_osj/: efficient_model_sj.ipynb
efficientnet_yj/: efficientnet_b0_latest.ipynb
mobilenet/: README.md  mobilenet.ipynb
mobilenet_yj/: mobilenet_latest.ipynb
models/: efficientnet_b0_history.csv  efficientnet_v2_s_history.csv  mobilenet_v3_large_history.csv  model_compare_all_history.csv  model_compare_summary.csv  resnet18_history.csv  resnet34_history.csv
models/three_model_compare_weighted/: efficientnet_b0_history.csv  mobilenet_v3_large_history.csv  resnet18_history.csv  three_model_compare_all_history.csv  three_model_compare_summary.csv
resnet/: resnet_test.ipynb
service/: README.md  app.py  attention_logs.db  requirements-service.txt  service.ipynb
