[project]
name = "pytorchbasic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bing-image-downloader>=1.1.2",
    "datasets>=4.8.4",
    "ipykernel>=7.2.0",
    "koreanize-matplotlib>=0.1.1",
    "matplotlib>=3.10.8",
    "mediapipe>=0.10.33",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "streamlit>=1.56.0",
    "torch>=2.11.0",
    "torchsummary>=1.5.1",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
